Add celebration and English slides to lesson 20

--- a/src/slides.html
+++ b/src/slides.html
@@ -1788,12 +1788,53 @@
   </figure>
 </template>
 
-<template id="lesson20-page0">
+<template id="lesson20-page1">
   <h2>
-    Освоили Базу?) Ощущения)
+    Бухаем!!! По 50!! [5 min]
   </h2>
   <figure>
-    <img src="img/screaming-face-meme.png">
+    <img src="img/byxi4.jpg">
+  </figure>
+</template>
+
+<template id="lesson20-page2">
+  <h2>
+    Освоили Базу?) Ощущения) [5 min]
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/fight-club.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson20-page3">
+  <h2>
+    Онглицки - Розминке!! [10 min]
+  </h2>
+  <a href="https://www.youtube.com/watch?v=nyWAf2HPdFI?t=1m58s">1</a>
+  <p>
+    Before we come to the Prime Minister questions,
+  </p>
+  <p>
+    I would like to point out
+  </p>
+  <p>
+    The British sign language interpretation proceedings
+  </p>
+  <p>
+    Available to watch on Parliament live TV
+  </p>
+  <p>
+    We start... Prime Minister questions with Justin Mothers.
+  </p>
+  <p>
+    Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh
+  </p>
+  <figure>
+    <video controls>
+      <source src="/video/lizz-truss.mp4" type="video/mp4" />
+    </video>
   </figure>
 </template>
 
