Add slide with Liz Truss video

--- a/src/slides.html
+++ b/src/slides.html
@@ -1810,32 +1810,197 @@
 
 <template id="lesson20-page3">
   <h2>
+    Онглицки - TikTok Розминке!! [10 min]
+  </h2>
+  <figure>
+    <img src="img/kot-ko4ok.png"/>
+    <figcaption>
+      <a href="https://www.tiktok.com/@i_am_lexi4/video/7042387925371260161?is_copy_url=1&is_from_webapp=v1&q=%D0%BA%D0%BE%D1%82%D1%8B%20%D1%81%D0%BF%D0%BE%D1%80%D1%82&t=1667017872735"> Tiktok 1</a>, <a href="https://www.tiktok.com/@hanma.ivan.sii/video/6959866460386675970?is_from_webapp=v1&item_id=6959866460386675970">TikTok 2 </a>
+    </figcaption>
+  </figure>
+  <p>
+</template>
+
+<template id="lesson20-page4">
+  <div class="english-video-slide">
+    <div class="subs">
+      <p>
+        Before we come to the Prime Minister questions,
+      </p>
+      <p>
+        I would like to point out
+      </p>
+      <p>
+        The British sign language interpretation proceedings
+      </p>
+      <p>
+        Available to watch on Parliament live TV
+      </p>
+      <p>
+        We start... Prime Minister questions with Justin Mothers.
+      </p>
+      <p>
+        Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh
+      </p>
+    </div>
+    <div class="video">
+      <figure>
+        <video controls>
+          <source src="/video/liz-01.mp4" type="video/mp4" />
+        </video>
+      </figure>
+    </div>
+  </div>
+</template>
+
+<template id="lesson20-page4">
+  <h2>
     Онглицки - Розминке!! [10 min]
   </h2>
-  <a href="https://www.youtube.com/watch?v=nyWAf2HPdFI?t=1m58s">1</a>
+  <a href="https://www.youtube.com/watch?v=nyWAf2HPdFI?t=1m58s">02:10-02:10</a>
   <p>
-    Before we come to the Prime Minister questions,
+    Question number one please mister Splinter
   </p>
   <p>
-    I would like to point out
+    Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh <br/>
+    [Встают барышни]
   </p>
   <p>
-    The British sign language interpretation proceedings
+    2:19 Liz Truss<br/>
+    Mr Speaker, Mr Speaker [гул]
   </p>
   <p>
-    Available to watch on Parliament live TV
+    2:22 Liz Truss<br/>
+    This morning I had meetings with ministers and collegues, and others...
   </p>
   <p>
-    We start... Prime Minister questions with Justin Mothers.
+    2:26 Liz Truss<br/>
+    I shall have further such meeting later on today!
   </p>
   <p>
-    Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh
+    2:32 [гул] [встает чел]<br/>
+    [неразборчивое бормотание, гул]... When the penny dropped for the Prime minister on Monday,
   </p>
-  <figure>
-    <video controls>
-      <source src="/video/lizz-truss.mp4" type="video/mp4" />
-    </video>
-  </figure>
+  <p>
+    2:39 чел что встал<br/>
+    And she realized that her budger was responsible for crashing the economy.
+  </p>
+  <p>
+    2:43 чел что встал<br/>
+    She should've come to this House, to explain herself, and to apolozige<br />
+    [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
+  </p>
+  <p>
+    2:43 чел что встал<br/>
+    To the millions of people, who will now be paying hunders of pounds extra a month
+  </p>
+  <p>
+    2:50 чел что встал<br/>
+    On their Mortgages [Ипотеки], because of her mistakes
+  </p>
+  <p>
+    2:54 чел что встал<br/>
+    But now she's here, can she tell us, given the Absolute Chaos her Government has created
+  </p>
+  <p>
+    2:57 чел что встал<br/>
+    While the Chancellor lost his Job, but She kep Hers!
+  </p>
+  <p>
+    3:00<br/>
+    Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh 
+  </p>
+  <p>
+    3:02 Liz Truss<br/>
+    Mr. Speaker, I have been very clear<br/>
+    [Фууууууууууууууу]
+  </p>
+  <p>
+    3:06 Liz Truss<br/>
+    Mr. Speaker, I have been very clear, that I am...
+  </p>
+  <p>
+    3:09 Liz Truss<br/>
+    Mr. Speaker!!!<br />
+    [Показывает на Пидорасов что гул создают]
+  </p>
+  <p>
+    3:10 Liz Truss<br/>
+    ...that I am sorry, and that I have made Mistakes [Ошибке].
+  </p>
+  <p>
+    3:14 Liz Truss<br/>
+    But the Right thing to do in those Circumstances (в тех Условиях)
+  </p>
+  <p>
+    3:18 Liz Truss<br/>
+    is to make Changes, which I've Made,
+  </p>
+  <p>
+    3:22 Liz Truss<br/>
+    and to get on (продолжать) with the Job and Deliver for the British People
+    [фууууу]
+  </p>
+  <p>
+    3:26 Liz Truss<br/>
+    And Mr. Speaker, we've Delivered the Energy Price Guarantee,
+  </p>
+  <p>
+    3:29 Liz Truss<br/>
+    We've helped People this Winter, and I will Continue to Do That.
+  </p>
+  <p>
+    3:33 <br/>
+    [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
+  </p>
+  <p>
+    3:34<br/>
+    Lawrence Robertson!
+  </p>
+  <p>
+    3:34<br/>
+    Lawrence Robertson!
+  </p>
+  <p>
+    3:37 Умный дед с задней парты<br/>
+    Thank you Mr. Speaker.<br/>
+    Does the Prime Minister agree with Me, thath Local People and Local Councils, are the best placed to decide (им лучше решать - Людям), how many houses they need, and where those houses should go. [yeah, yeah! на фоне].
+  </p>
+  <p>
+    3:49 Умный дед с задней парты<br/>
+    And if she does, will she end the top-down Approach (Подход) to housing targets or reduce (уменьшить), or prefferebly, remove the powers of the Planning Inspector [yeah!].
+  </p>
+  <p>
+    3:59 <br/>
+    Prime Minister!
+  </p>
+  <p>
+    4:00 Liz Truss<br/>
+    Well my honorable friend is absolutely right, 
+  </p>
+  <p>
+    4:03 Liz Truss<br/>
+    We WILL abolish the top-down housing targets<br/>
+    [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
+  </p>
+  <p>
+    4:06 Liz Truss<br/>
+    We want, Mr. Speaker, we want Decisions (Решения) about homes, about infrastructure,
+  </p>
+  <p>
+    4:14 Liz Truss<br/>
+    Driven by Local People, Not driven by White Hall,
+  </p>
+  <p>
+    4:19 Liz Truss<br/>
+    And that's why we're setting up New, locally driven Investment Zones (Инвестиции на Зонке).<br/>
+    [Yeaaaahh... (Вяленько)]
+  </p>
+  <p>
+    4:20 !!!<br/>
+    Without junction, the Leader of the Oppostion [Неразборчивое Британское Имя]<br />
+    [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
+  </p>
 </template>
 
 <script>
