--- a/src/slides.html
+++ b/src/slides.html
@@ -1853,154 +1853,173 @@
   </div>
 </template>
 
-<template id="lesson20-page4">
-  <h2>
-    Онглицки - Розминке!! [10 min]
-  </h2>
-  <a href="https://www.youtube.com/watch?v=nyWAf2HPdFI?t=1m58s">02:10-02:10</a>
-  <p>
-    Question number one please mister Splinter
-  </p>
-  <p>
-    Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh <br/>
-    [Встают барышни]
-  </p>
-  <p>
-    2:19 Liz Truss<br/>
-    Mr Speaker, Mr Speaker [гул]
-  </p>
-  <p>
-    2:22 Liz Truss<br/>
-    This morning I had meetings with ministers and collegues, and others...
-  </p>
-  <p>
-    2:26 Liz Truss<br/>
-    I shall have further such meeting later on today!
-  </p>
-  <p>
-    2:32 [гул] [встает чел]<br/>
-    [неразборчивое бормотание, гул]... When the penny dropped for the Prime minister on Monday,
-  </p>
-  <p>
-    2:39 чел что встал<br/>
-    And she realized that her budger was responsible for crashing the economy.
-  </p>
-  <p>
-    2:43 чел что встал<br/>
-    She should've come to this House, to explain herself, and to apolozige<br />
-    [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
-  </p>
-  <p>
-    2:43 чел что встал<br/>
-    To the millions of people, who will now be paying hunders of pounds extra a month
-  </p>
-  <p>
-    2:50 чел что встал<br/>
-    On their Mortgages [Ипотеки], because of her mistakes
-  </p>
-  <p>
-    2:54 чел что встал<br/>
-    But now she's here, can she tell us, given the Absolute Chaos her Government has created
-  </p>
-  <p>
-    2:57 чел что встал<br/>
-    While the Chancellor lost his Job, but She kep Hers!
-  </p>
-  <p>
-    3:00<br/>
-    Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh 
-  </p>
-  <p>
-    3:02 Liz Truss<br/>
-    Mr. Speaker, I have been very clear<br/>
-    [Фууууууууууууууу]
-  </p>
-  <p>
-    3:06 Liz Truss<br/>
-    Mr. Speaker, I have been very clear, that I am...
-  </p>
-  <p>
-    3:09 Liz Truss<br/>
-    Mr. Speaker!!!<br />
-    [Показывает на Пидорасов что гул создают]
-  </p>
-  <p>
-    3:10 Liz Truss<br/>
-    ...that I am sorry, and that I have made Mistakes [Ошибке].
-  </p>
-  <p>
-    3:14 Liz Truss<br/>
-    But the Right thing to do in those Circumstances (в тех Условиях)
-  </p>
-  <p>
-    3:18 Liz Truss<br/>
-    is to make Changes, which I've Made,
-  </p>
-  <p>
-    3:22 Liz Truss<br/>
-    and to get on (продолжать) with the Job and Deliver for the British People
-    [фууууу]
-  </p>
-  <p>
-    3:26 Liz Truss<br/>
-    And Mr. Speaker, we've Delivered the Energy Price Guarantee,
-  </p>
-  <p>
-    3:29 Liz Truss<br/>
-    We've helped People this Winter, and I will Continue to Do That.
-  </p>
-  <p>
-    3:33 <br/>
-    [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
-  </p>
-  <p>
-    3:34<br/>
-    Lawrence Robertson!
-  </p>
-  <p>
-    3:34<br/>
-    Lawrence Robertson!
-  </p>
-  <p>
-    3:37 Умный дед с задней парты<br/>
-    Thank you Mr. Speaker.<br/>
-    Does the Prime Minister agree with Me, thath Local People and Local Councils, are the best placed to decide (им лучше решать - Людям), how many houses they need, and where those houses should go. [yeah, yeah! на фоне].
-  </p>
-  <p>
-    3:49 Умный дед с задней парты<br/>
-    And if she does, will she end the top-down Approach (Подход) to housing targets or reduce (уменьшить), or prefferebly, remove the powers of the Planning Inspector [yeah!].
-  </p>
-  <p>
-    3:59 <br/>
-    Prime Minister!
-  </p>
-  <p>
-    4:00 Liz Truss<br/>
-    Well my honorable friend is absolutely right, 
-  </p>
-  <p>
-    4:03 Liz Truss<br/>
-    We WILL abolish the top-down housing targets<br/>
-    [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
-  </p>
-  <p>
-    4:06 Liz Truss<br/>
-    We want, Mr. Speaker, we want Decisions (Решения) about homes, about infrastructure,
-  </p>
-  <p>
-    4:14 Liz Truss<br/>
-    Driven by Local People, Not driven by White Hall,
-  </p>
-  <p>
-    4:19 Liz Truss<br/>
-    And that's why we're setting up New, locally driven Investment Zones (Инвестиции на Зонке).<br/>
-    [Yeaaaahh... (Вяленько)]
-  </p>
-  <p>
-    4:20 !!!<br/>
-    Without junction, the Leader of the Oppostion [Неразборчивое Британское Имя]<br />
-    [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
-  </p>
+<template id="lesson20-page5">
+  <div class="english-video-slide">
+    <div class="subs">
+      <p>
+        Question number one please mister Splinter
+      </p>
+      <p>
+        Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh <br/>
+        [Встают барышни]
+      </p>
+      <p>
+        Mr Speaker, Mr Speaker [гул]
+      </p>
+      <p>
+        This morning I had meetings with ministers and collegues, and others...
+      </p>
+      <p>
+        In ADDITION to my Duties in this House,
+      </p>
+      <p>
+        I shall have further such meeting later Today!
+      </p>
+      <p>
+        [гул] [встает чел]<br/>
+      </p>
+    </div>
+    <div class="video">
+      <figure>
+        <video controls>
+          <source src="/video/liz-02.mp4" type="video/mp4" />
+        </video>
+      </figure>
+    </div>
+  </div>
+</template>
+
+<template id="lesson20-page6">
+  <div class="english-video-slide">
+    <div class="subs">
+      <p>
+        [гул] [встает чел] Mr. Mothers!
+      </p>
+      <p>
+        [Thank you Mr. Splinter] When the penny dropped for the Prime minister on Monday,
+      </p>
+      <p>
+        And she realized that Her Budget (Херовый Бюджет) was Responsible for Crashing the Economy.
+      </p>
+      <p>
+        She should've come to this House, to explain herself, and to apolozige<br />
+        [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
+      </p>
+      <p>
+        To the millions of people, who will now be paying hunders of pounds extra a month
+      </p>
+      <p>
+        On their Mortgages [Ипотеки], because of her mistakes
+      </p>
+      <p>
+        But now she's here, can she tell us, given the Absolute Chaos her Government has created
+      </p>
+      <p>
+        While the Chancellor Lost his Job, but She Kept Hers (Она Держала Херы)!<br />
+        Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh 
+      </p>
+    </div>
+    <div class="video">
+      <figure>
+        <video controls>
+          <source src="/video/liz-03.mp4" type="video/mp4" />
+        </video>
+      </figure>
+    </div>
+  </div>
+</template>
+
+<template id="lesson20-page7">
+  <div class="english-video-slide">
+    <div class="subs">
+      <p>
+        Liz Truss<br/>
+        Mr. Speaker, I've been Very Clear, that I am...<br/>
+        [Фууууууууууууууу]
+      </p>
+      <p>
+        Liz Truss<br/>
+        Mr. Speaker!!!<br />
+        [Показывает на Пидорасов что гул создают]
+      </p>
+      <p>
+        Liz Truss<br/>
+        ...that I am sorry, and that I have made Mistakes [Ошибке].
+      </p>
+      <p>
+        Liz Truss<br/>
+        But the Right thing to do in those Circumstances (в тех Условиях)
+      </p>
+      <p>
+        Liz Truss<br/>
+        is to make Changes, which I've Made,
+      </p>
+      <p>
+        Liz Truss<br/>
+        and to get on (продолжать) with the Job and Deliver for the British People
+      </p>
+      <p>
+        Liz Truss<br/>
+        And Mr. Speaker, we've Delivered the Energy Price Guarantee,
+      </p>
+      <p>
+        Liz Truss<br/>
+        We've helped People this Winter, and I will Continue to Do That.
+      </p>
+      <p>
+        [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
+      </p>
+      <p>
+        Lawrence Robertson!
+      </p>
+      <p>
+        Умный Дед С Задней Парты<br/>
+        Thank you Mr. Speaker.<br/>
+        Does the Prime Minister agree with Me, that Local People and Local Councils, are Best Placed to Decide (им Лучше Решать - Людям), how many houses they need, and where those houses should go. [yeah, yeah! на фоне].
+      </p>
+      <p>
+        And if she does, will she end the top-down Approach (Подход) to housing targets, and Reduce (Уменьшить), or Preferrebly, Remove the Powers of the Planning Inspector [yeah!].
+      </p>
+      <p>
+        Prime Minister!
+      </p>
+      <p>
+        Liz Truss<br/>
+        Well my honorable friend is absolutely right, 
+      </p>
+      <p>
+        Liz Truss<br/>
+        We WILL abolish the top-down housing targets<br/>
+        [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
+      </p>
+      <p>
+        Liz Truss<br/>
+        We want, Mr. Speaker, we want Decisions (Решения) about homes, about infrastructure,
+      </p>
+      <p>
+        Liz Truss<br/>
+        Driven by Local People, Not driven by White Hall,
+      </p>
+      <p>
+        Liz Truss<br/>
+        And that's why we're setting up New, Locally Driven Investment Zones (Инвестиции на Зонке).<br/>
+        [Yeaaaahh... (Вяленько)]
+      </p>
+      <p>
+        Without junction, the Leader of the Oppostion [Неразборчивое Британское Имя]<br />
+        [Yyyyeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhh]
+      </p>
+      <p>
+        Thank you Mr. Speaker...
+      </p>
+    </div>
+    <div class="video">
+      <figure>
+        <video controls>
+          <source src="/video/liz-04.mp4" type="video/mp4" />
+        </video>
+      </figure>
+    </div>
 </template>
 
 <script>
