Add more slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2022,6 +2022,42 @@
     </div>
 </template>
 
+<template id="lesson20-page8">
+  <h2>[7 min] Coursework: Tony</h2>
+  <p>What's up with the Website? :)</p>
+</template>
+
+<template id="lesson20-page9">
+  <h2>[7 min] Coursework: Johnny</h2>
+  <p>Start game button Pull Request (code demo)</p>
+</template>
+
+<template id="lesson20-page10">
+  <h2>[7 min] Coursework: Dimon</h2>
+  <p>Michigan week 2: Quiz</p>
+</template>
+
+<template id="lesson20-page11">
+  <h2>Cartesian Coordinates</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=mgx0kT5UbKk">YouTube</a>
+  </p>
+</template>
+
+<template id="lesson20-page12">
+  <h2>Алгебра 6 клас</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=mgx0kT5UbKk">YouTube</a>
+  </p>
+</template>
+
+<template id="lesson20-page13">
+  <h2>Cartesian Coordinates</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=mgx0kT5UbKk">YouTube</a>
+  </p>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
