Add lesson 21 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2058,6 +2058,118 @@
   </p>
 </template>
 
+<!-- Lesson 21 -->
+
+<template id="lesson21-page0">
+  <h2>Банки за Домашку</h2>
+  <p>
+
+  </p>
+</template>
+
+<template id="lesson21-page0">
+  <h2>Наскоко щас будет сложно?</h2>
+  <p>
+    <ol>
+      <li>Изян</li>
+      <li>Намрмас</li>
+      <li>Нереалово</li>
+    </ol>
+  </p>
+</template>
+
+<template id="lesson21-page1">
+  <h2>Тик ток розминке :) (Warm up)</h2>
+  <p>
+    <a href="https://www.instagram.com/reel/CkblJQdgh9l/?igshid=MDJmNzVkMjY=">
+      Titanic
+    </a>
+  </p>
+</template>
+
+<template id="lesson21-page2">
+    <h2>
+      ЛИТУЧКА
+    </h2>
+    <figure>
+      <img src="img/lety4ka.jpeg" />
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="lesson21-page3">
+    <h2>
+      ЛИТУЧКА
+    </h2>
+    <figure>
+      <img src="img/lety4ka.jpeg" />
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="lesson21-page1">
+  <h2>Литучка :) (Warm up)</h2>
+  <p>
+    <a href="https://www.instagram.com/reel/CkblJQdgh9l/?igshid=MDJmNzVkMjY=">
+      Titanic
+    </a>
+  </p>
+</template>
+
+<template id="lesson21-page1">
+  <h2>CSS Grid: 2 Колонке</h2>
+  <figure>
+    <img src="img/css-grid.png" />
+  </figure>
+</template>
+
+<template id="lesson21-page2">
+  <h2>Делоем все 2 колонке) Тони в своем сайте</h2>
+    <figure>
+      <img src="img/css-grid.png" />
+    </figure>
+</template>
+
+<template id="lesson21-page3">
+  <h2>Курсочи: тОни</h2>
+  <p>
+    <figure>
+      <img src="img/personal-website.png" />
+    </figure>
+  </p>
+</template>
+
+<template id="lesson21-page4">
+  <h2>Тик ток розминке :) (Warm up)</h2>
+  <p>
+    <a href="https://www.instagram.com/reel/CkblJQdgh9l/?igshid=MDJmNzVkMjY=">
+      Titanic
+    </a>
+  </p>
+</template>
+
+<template id="lesson21-page3">
+  <h2>Курсочи: дЕмон</h2>
+  <p>
+    <figure>
+      <img src="img/michigan.jpeg" />
+    </figure>
+  </p>
+</template>
+
+
+<template id="lesson21-page2">
+  <h2>Курсочи: джОни</h2>
+  <p>
+    <figure>
+      <img src="img/start-game.jpeg" />
+    </figure>
+  </p>
+</template>
+
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
