Add more lesson21 slides

--- a/src/rating.html
+++ b/src/rating.html
@@ -66,6 +66,9 @@
     <div class="participant">
       <img src="/img/dimon.jpg" />
     </div>
+    <div class="participant">
+      <img src="/img/hellgamer.jpg" />
+    </div>
 </body>
 
 <template id="weed-svg">
