--- a/src/slides.html
+++ b/src/slides.html
@@ -2062,12 +2062,12 @@
 
 <template id="lesson21-page0">
   <h2>Банки за Домашку</h2>
-  <p>
-
-  </p>
+  <figure>
+    <img src="img/banki-za-domawky.png" />
+  </figure>
 </template>
 
-<template id="lesson21-page0">
+<template id="lesson21-page1">
   <h2>Наскоко щас будет сложно?</h2>
   <p>
     <ol>
@@ -2078,62 +2078,73 @@
   </p>
 </template>
 
-<template id="lesson21-page1">
-  <h2>Тик ток розминке :) (Warm up)</h2>
+<template id="lesson21-page2">
+  <h2>[5 min] Тик ток розминке :) (Warm up)</h2>
   <p>
     <a href="https://www.instagram.com/reel/CkblJQdgh9l/?igshid=MDJmNzVkMjY=">
-      Titanic
+      Tiktanic
     </a>
   </p>
-</template>
-
-<template id="lesson21-page2">
-    <h2>
-      ЛИТУЧКА
-    </h2>
-    <figure>
-      <img src="img/lety4ka.jpeg" />
-    </figure>
-    <p>
-    </p>
 </template>
 
 <template id="lesson21-page3">
+  <h2>Насколько было сложено?)</h2>
+</template>
+
+<template id="lesson21-page4">
     <h2>
       ЛИТУЧКА
     </h2>
     <figure>
-      <img src="img/lety4ka.jpeg" />
+      <img src="img/lety4ka.gif" />
     </figure>
     <p>
     </p>
 </template>
 
-<template id="lesson21-page1">
-  <h2>Литучка :) (Warm up)</h2>
-  <p>
-    <a href="https://www.instagram.com/reel/CkblJQdgh9l/?igshid=MDJmNzVkMjY=">
-      Titanic
-    </a>
-  </p>
+<template id="lesson21-page5">
+    <h2>
+      [15 min] Geometry: 12 ЗАДАЧ: ХАЛЯВА ЗАКОНЧИЛАСЬ
+    </h2>
+    <figure>
+      <img onclick="this.src=`img/area-${(++this.src.match(/area-(\d+)/)[1])}.png`" src="img/area-1.png" />
+    </figure>
+    <p>
+    </p>
 </template>
 
-<template id="lesson21-page1">
-  <h2>CSS Grid: 2 Колонке</h2>
+<template id="lesson21-page6">
+  <h2>Насколько было сложено?)</h2>
+</template>
+
+<template id="lesson21-page7">
+  <h2>ПЕРЕМЕНА</h2>
+    <figure>
+      <img src="img/peremena.jpeg" />
+    </figure>
+</template>
+
+<template id="lesson21-page8">
+  <h2>[5 min] English (Parliament)</h2>
+  <a href="https://www.youtube.com/watch?v=cQUMAHQjsJ4&t=38m45s">Ютубе</a>
+</template>
+
+<template id="lesson21-page9">
+  <h2>[5 min] Теорея: CSS Grid: 2 Колонке</h2>
   <figure>
     <img src="img/css-grid.png" />
   </figure>
 </template>
 
-<template id="lesson21-page2">
-  <h2>Делоем все 2 колонке) Тони в своем сайте</h2>
+<template id="lesson21-page10">
+  <h2>[5 min] Делоем все 2 колонке) Тони в своем сайте</h2>
     <figure>
       <img src="img/css-grid.png" />
     </figure>
 </template>
 
-<template id="lesson21-page3">
-  <h2>Курсочи: тОни</h2>
+<template id="lesson21-page11">
+  <h2>[7 min] Курсочи: тОни</h2>
   <p>
     <figure>
       <img src="img/personal-website.png" />
@@ -2141,17 +2152,24 @@
   </p>
 </template>
 
-<template id="lesson21-page4">
-  <h2>Тик ток розминке :) (Warm up)</h2>
-  <p>
-    <a href="https://www.instagram.com/reel/CkblJQdgh9l/?igshid=MDJmNzVkMjY=">
-      Titanic
-    </a>
-  </p>
+<template id="lesson21-page12">
+  <h2>ПЕРЕМЕНА</h2>
+    <figure>
+      <img src="img/peremena.jpeg" />
+    </figure>
 </template>
 
-<template id="lesson21-page3">
-  <h2>Курсочи: дЕмон</h2>
+<template id="lesson21-page13">
+  <h2>[2 min] Elon</h2>
+  <figure>
+    <video controls>
+      <source src="/video/elon.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson21-page14">
+  <h2>[7 min] Курсочи: дЕмон</h2>
   <p>
     <figure>
       <img src="img/michigan.jpeg" />
@@ -2159,9 +2177,8 @@
   </p>
 </template>
 
-
-<template id="lesson21-page2">
-  <h2>Курсочи: джОни</h2>
+<template id="lesson21-page15">
+  <h2>[7 min] Курсочи: джОни</h2>
   <p>
     <figure>
       <img src="img/start-game.jpeg" />
@@ -2169,8 +2186,72 @@
   </p>
 </template>
 
+<template id="lesson21-page16">
+  <h2 class="cert-heading">СЕРТИФИКАТ</h2>
+  <div class="certificate">
+    <div class="pechat">
+      <img src="img/napaleon-circle.png" />
+      <img src="img/notarius.png" />
+    </div>
+    <div class="text">
+      <p>Курс &quot;ОСНОВЫ HTML, CSS, JAVASCRIPT&quot;</p>
+      <p>[21 занятие]</p>
+      <p>УСПЕШНО ОКОНЧЕН СТУДЕНТОМ</p>
+      <p class="student">TONY</p>
+    </div>
+  </div>
+</template>
+
+<template id="lesson21-page17">
+  <h2 class="cert-heading">СЕРТИФИКАТ</h2>
+  <div class="certificate">
+    <div class="pechat">
+      <img src="img/napaleon-circle.png" />
+      <img src="img/notarius.png" />
+    </div>
+    <div class="text">
+      <p>Курс &quot;ОСНОВЫ HTML, CSS, JAVASCRIPT&quot;</p>
+      <p>[21 занятие]</p>
+      <p>УСПЕШНО ОКОНЧЕН СТУДЕНТОМ</p>
+      <p class="student">DIMON</p>
+    </div>
+  </div>
+</template>
+
+<template id="lesson21-page18">
+  <h2 class="cert-heading">СЕРТИФИКАТ</h2>
+  <div class="certificate">
+    <div class="pechat">
+      <img src="img/napaleon-circle.png" />
+      <img src="img/notarius.png" />
+    </div>
+    <div class="text">
+      <p>Курс &quot;ОСНОВЫ HTML, CSS, JAVASCRIPT&quot;</p>
+      <p>[21 занятие]</p>
+      <p>УСПЕШНО ОКОНЧЕН СТУДЕНТОМ</p>
+      <p class="student">JOHNNY</p>
+    </div>
+  </div>
+</template>
+
+<template id="lesson21-page7">
+  <h2>ПЕРЕМЕНА</h2>
+    <figure>
+      <img src="img/peremena.jpeg" />
+    </figure>
+</template>
+
+<template id="lesson21-page15">
+  <h2>Кодим: МышкО</h2>
+  <p>
+    <code>mousemove</code> Event.
+  </p>
+</template>
+
+
 
 <script>
+  let currentTime = 0;
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
 
@@ -2200,6 +2281,7 @@
   };
 
   const showCurrentPage = () => {
+      currentTime = 0;
       const pageSelector = `#${lesson}-page${currentPage}`;
       console.log('page selector', pageSelector);
       const page = document.querySelector(pageSelector);
@@ -2328,7 +2410,6 @@
   const timer = document.querySelector('#timer');
 
   const zeroPad = (num, places) => String(num).padStart(places, '0')
-  let currentTime = 0;
   setInterval(() => {
       timer.innerHTML = `${zeroPad(Math.floor(currentTime / 60), 2)}:${zeroPad(Math.floor(currentTime % 60), 2)}`;
       currentTime++;
