Add more lesson21 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2234,21 +2234,47 @@
   </div>
 </template>
 
-<template id="lesson21-page7">
+<template id="lesson21-page19">
   <h2>ПЕРЕМЕНА</h2>
     <figure>
       <img src="img/peremena.jpeg" />
     </figure>
 </template>
 
-<template id="lesson21-page15">
-  <h2>Кодим: МышкО</h2>
-  <p>
-    <code>mousemove</code> Event.
-  </p>
+<template id="lesson21-page20">
+  <h2>Литучка: вопросы на собес</h2>
+  <figure>
+    <img src="img/js-questions.png" />
+    <figcaption>
+      <a href="https://github.com/YauhenKavalchuk/interview-questions/blob/main/questions/js.md">ссылке</a>
+    </figcaption>
+  </figure>
 </template>
 
 
+<template id="lesson21-page21">
+  <h2>Кодим: МышкО</h2>
+  <p>
+    Задача: показывать текущие координаты мышки на экране.
+  </p>
+  <p>
+    Event: <code>mousemove</code>
+  </p>
+</template>
+
+<template id="lesson21-page22">
+  <h2>Задача №2: очертить "запрещенный" квадрат</h2>
+  <p>
+    Нужно показывать на экране текст "запрет", когда мышка находится внутри квадрата 200х200 пикселей сверху слева экрана.
+  </p>
+</template>
+
+<template id="lesson21-page23">
+  <h2>FIN</h2>
+  <p>
+    КОНЕКЦ
+  </p>
+</template>
 
 <script>
   let currentTime = 0;
