Add 1st slide for lesson 22

--- a/src/slides.html
+++ b/src/slides.html
@@ -2276,6 +2276,13 @@
   </p>
 </template>
 
+<template id="lesson22-page0">
+  <h2>YouTube Розминке :)</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=6s2UJBFDCoA">Developper vs QA Engineer</a>
+  </p>
+</template>
+
 <script>
   let currentTime = 0;
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
