Add some slides for future

--- a/src/slides.html
+++ b/src/slides.html
@@ -2276,6 +2276,29 @@
   </p>
 </template>
 
+<template id="lesson22-pageX">
+  <h2>Set Theory</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=6s2UJBFDCoA">Комбінаторика. Початки теорії множини.</a>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>Venn Diagrams</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=b6t0994ZZDA">Venn Diagrams: Shading Regions for Two Sets</a>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>Venn Diagrams</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=b6t0994ZZDA">Venn Diagrams: Shading Regions for Two Sets</a>
+  </p>
+</template>
+https://www.youtube.com/watch?v=7cTWea9YAJE
+
+
 <template id="lesson22-page0">
   <h2>YouTube Розминке :)</h2>
   <p>
@@ -2316,6 +2339,16 @@
       console.log(point);
     </code>
     </pre>
+  </p>
+</template>
+
+<template id="lesson22-page3">
+  <h2>РЕКТ</h2>
+  <p>
+    Что такое ОБЪЕКТО?
+  </p>
+  <p>
+    Насколько это сложенно?)
   </p>
 </template>
 
