Add more lesson22 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2306,7 +2306,130 @@ https://www.youtube.com/watch?v=7cTWea9YAJE
   </p>
 </template>
 
-<template id="lesson22-page1">
+<template id="lesson22-pageX">
+  <h2>ЭКЗАМЕН</h2>
+  <p>
+    -10 банок - отчислен
+    10+ банок - пятерочка твердая
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗАДАЧА</h2>
+  <p>
+    КТО НЕ СДЕЛАЕТ - ОТЧИСЛЕН.
+  </p>
+  <p>
+    НОВЕНЬКИЕ - НЕ ЗАЧИСЛЕНЫ.
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ВЫЧИСЛИТЬ ТРОЙНОЙ ИНТЕГРАЛ</h2>
+  <figure>
+    <img src="img/integral-task.jpg" />
+  </figure>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ВЫЧИСЛИТЬ ТРОЙНОЙ ИНТЕГРАЛ</h2>
+  <figure>
+    <img src="img/integral-volume.jpg" />
+  </figure>
+</template>
+
+<template id="Начинаем новый материал">
+  <h2>RECT Фукцея</h2>
+  <figure>
+    <img src="img/rect-function.jpg" />
+  </figure>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>What is a Function?</h2>
+  <p>
+    Чито токое Фукцея?
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>What is a Function?</h2>
+  <figure>
+    <img src="img/js-function.png" />
+    <figcaption>
+      А чИтО эТо?
+    </figcaption>
+  </figure>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая печатает переданный текст на экран.
+
+    <pre>
+    <code>
+      print('xuy4ek'); // выводит xuy4ek на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая умножает число на 2.
+
+    <pre>
+    <code>
+      print(add2(5)); // выводит 10 на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая складывает 2 числа, и отнимает 3.
+
+    <pre>
+    <code>
+      print(sumMinus3(5, 7)); // выводит 9 на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая возращает true если число больше 2.
+
+    <pre>
+    <code>
+      print(greater2(4)); // выводит true на экран
+      print(greater2(0)); // выводит false на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая возращает true если число в квадрате меньше Пи.
+
+    <pre>
+    <code>
+      print(squareLessThanPi(2)); // выводит true на экран
+      print(squareLessThanPi(1)); // выводит false на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
   <h2>Новый Мотериал: ОБЪЕКТО</h2>
   <p>
     Что такое ОБЪЕКТО?
@@ -2326,29 +2449,109 @@ https://www.youtube.com/watch?v=7cTWea9YAJE
         y: 2,
       };
 
-      document.body.innerHTML += 'point: ';
-      document.body.innerHTML += point;
-      document.body.innerHTML += '<br>';
-      document.body.innerHTML += 'point.x: ';
-      document.body.innerHTML += point.x;
-      document.body.innerHTML += '<br>';
-      document.body.innerHTML += 'point.y: ';
-      document.body.innerHTML += point.y;
+      print('point: ' + point);
+      print('point.x: ' + point.x);
+      print('point.y: ' + point.y);
 
       console.log('point: ');
       console.log(point);
+
+      console.log('point.x: ');
+      console.log(point.x);
+
+      console.log('point.y: ');
+      console.log(point.y);
     </code>
     </pre>
   </p>
 </template>
 
-<template id="lesson22-page3">
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая принимает точку как обьект { x , y }, и возращает расстояние точки до начала координат (0, 0) числом.
+
+    <pre>
+    <code>
+      const point1 = {
+        x: 3,
+        y: 4,
+      };
+
+      const point2 = {
+        x: 1,
+        y: 1,
+      };
+
+      print(point1); // выводит 5 на экран
+      print(point2); // выводит 1.4142135623730951 на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>РЕКТ</h2>
+  <figure>
+    <img src="img/rectangle.jpg" />
+  </figure>
+</template>
+<template id="lesson22-pageX">
   <h2>РЕКТ</h2>
   <p>
-    Что такое ОБЪЕКТО?
+    <pre>
+      const rect = {
+        x: 0,
+        y: 0,
+        width: 100,
+        height: 200,
+      };
+
+    <code>
   </p>
-  <p>
-    Насколько это сложенно?)
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая печатает на экран координаты и размер прямоульника { x, y, width, height }
+    <pre>
+    <code>
+      printRect({ x: 0, y: 0, width: 100, height: 200 });
+      // печататает x: 0<br/>y: 0</br>width: 100</br>height:100<br/>
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею isInsideRect(point, rect), которая возвращает true, если точка внутри прямоугольника, и false, если вне.
+
+    <pre>
+    <code>
+      const rect = {
+        x: 0,
+        y: 0,
+        width: 100,
+        height: 200,
+      }
+
+      const point1 = {
+        x: 50,
+        y: 50,
+      };
+
+      const point2 = {
+        x: 50,
+        y: 300,
+      };
+
+      isInsideRect(point1, rect); // true
+      isInsideRect(poin2, rect); // false
+    </code>
+    </pre>
   </p>
 </template>
 
