Edit lesson22 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2276,7 +2276,84 @@
   </p>
 </template>
 
+
+<template id="lesson22-page0">
+  <h2>ЗНОКОМСТВО</h2>
+  <figure>
+    <img src="img/preved.gif" />
+  </figure>
+</template>
+
+<template id="lesson22-page0">
+  <h2>English: РОЗМИНКЕ</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=6s2UJBFDCoA">Developper vs QA Engineer</a>
+  </p>
+</template>
+
+<template id="lesson22-page0">
+  <h2>[5 min] English: КАЖДЫЙ О СЕБЕ ПО ПРЕДЛОЖЕНИЮ</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=o5YF-0ISyVA&t=70s">Школа</a>
+  </p>
+</template>
+
+<template id="lesson22-page0">
+  <div class="rules">
+    <h2>
+      НОВЕНЬКИМ: ПРАВЕЛА
+    </h2>
+
+    <p>
+      За каждый вопрос - банка.
+    </p>
+
+    <p>
+      За каждый ответ - банка.
+    </p>
+
+    <p>
+      Если вопросов нет - банка учителю.
+    </p>
+
+    <p>
+      Любое присуждение банки может быть оспорено общим голосованием.
+    </p>
+
+    <p>
+      В любой момент можно поднять голосование на штраф в 1 банку - по согласию всех учасников.
+    </p>
+
+    <p>
+      Право Вето: Ванчик, Димончик.
+    </p>
+
+    <p>
+      <a href="rating.html">Rating page</a>
+    </p>
+  </div>
+
+</template>
+
 <template id="lesson22-pageX">
+  <h2>БАНКИ ЗА ДОМАШКУ</h2>
+  <p>
+  </p>
+</template>
+
+<template id="lesson22-pageX">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая умножает число на 2.
+    <pre>
+    <code>
+      print(add2(5)); // выводит 10 на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson22-page0">
   <h2>Set Theory</h2>
   <p>
     <a href="https://www.youtube.com/watch?v=6s2UJBFDCoA">Комбінаторика. Початки теорії множини.</a>
