--- a/src/rating.html
+++ b/src/rating.html
@@ -55,9 +55,6 @@
 
 <body>
     <div class="participant">
-      <img src="/img/napaleon.webp" />
-    </div>
-    <div class="participant">
       <img src="/img/johnny.jpg" />
     </div>
     <div class="participant">
@@ -68,6 +65,9 @@
     </div>
     <div class="participant">
       <img src="/img/hellgamer.jpg" />
+    </div>
+    <div class="participant">
+      <img src="/img/valik_h.jpg" />
     </div>
 </body>
 
