Correct lesson22 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2344,16 +2344,19 @@
 
 <template id="lesson22-page4">
   <h2>БАНКИ ЗА ДОМАШКУ</h2>
-  <p>
-    ДОСКА ПОМËТА
-  </p>
+  <figure>
+    <img src="img/king-cannabis.webp" />
+    <figcaption>
+      ДОСКА ПОМËТА
+    </figcaption>
+  </figure>
 </template>
 
 <template id="lesson22-page5">
-  <h2>ЭКЗАМЕН</h2>
-  <p>-10 банок - отчислен</p>
+  <h2>Математика на англ</h2>
+  <p>Насколько это сложенно??</p>
   <p>
-    10+ банок - пятерочка твердая
+    <a href="https://www.youtube.com/watch?v=e1gC0iU8FFk">YouTube</a>
   </p>
 </template>
 
