--- a/src/slides.html
+++ b/src/slides.html
@@ -2286,13 +2286,27 @@
 </template>
 
 <template id="lesson22-page1">
+  <h2>HELL GAMER</h2>
+  <figure>
+    <img src="img/hell-gamer-meme.jpg" />
+  </figure>
+</template>
+
+<template id="lesson22-page2">
+  <h2>VALIK_H</h2>
+  <figure>
+    <img src="img/valik-h-meme.jpg" />
+  </figure>
+</template>
+
+<template id="lesson22-page3">
   <h2>English: РОЗМИНКЕ</h2>
   <p>
     <a href="https://www.youtube.com/watch?v=6s2UJBFDCoA">Developper vs QA Engineer</a>
   </p>
 </template>
 
-<template id="lesson22-page2">
+<template id="lesson22-page4">
   <h2>[5 min] English: КАЖДЫЙ О СЕБЕ ПО ПРЕДЛОЖЕНИЮ</h2>
   <figure>
     <video controls>
@@ -2301,7 +2315,7 @@
   </figure>
 </template>
 
-<template id="lesson22-page3">
+<template id="lesson22-page5">
   <div class="rules">
     <h2>
       НОВЕНЬКИМ: ПРАВЕЛА
@@ -2342,7 +2356,7 @@
 
 </template>
 
-<template id="lesson22-page4">
+<template id="lesson22-page6">
   <h2>БАНКИ ЗА ДОМАШКУ</h2>
   <figure>
     <img src="img/king-cannabis.webp" />
@@ -2352,7 +2366,7 @@
   </figure>
 </template>
 
-<template id="lesson22-page5">
+<template id="lesson22-page7">
   <h2>Математика на англ</h2>
   <p>Насколько это сложенно??</p>
   <p>
@@ -2360,7 +2374,7 @@
   </p>
 </template>
 
-<template id="lesson22-page6">
+<template id="lesson22-page8">
   <h2>ЗАДАЧА</h2>
   <p>
     КТО НЕ СДЕЛАЕТ - ОТЧИСЛЕН.
@@ -2370,21 +2384,21 @@
   </p>
 </template>
 
-<template id="lesson22-page7">
+<template id="lesson22-page9">
   <h2>[5 сек] РАЗМИНКА: ТРОЙНОЙ ИНТЕГРАЛ</h2>
   <figure>
     <img src="img/triple-int.png" />
   </figure>
 </template>
 
-<template id="lesson22-page8">
+<template id="lesson22-page10">
   <h2>РЕШЕНИЕ</h2>
   <figure>
     <img src="img/int-solution.png" />
   </figure>
 </template>
 
-<template id="lesson22-page9">
+<template id="lesson22-page11">
   <h2>УРОК №22</h2>
   <figure>
     <img src="img/rect-function.jpeg" />
@@ -2392,14 +2406,14 @@
   </figure>
 </template>
 
-<template id="lesson22-page10">
+<template id="lesson22-page12">
   <h2>What is a Function?</h2>
   <p>
     Чито токое Фукцея?
   </p>
 </template>
 
-<template id="lesson22-page11">
+<template id="lesson22-page13">
   <h2>What is a Function?</h2>
   <figure>
     <img src="img/js-function.png" />
@@ -2409,7 +2423,7 @@
   </figure>
 </template>
 
-<template id="lesson22-page12">
+<template id="lesson22-page14">
   <h2>ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая печатает переданный текст на экран.
@@ -2422,7 +2436,7 @@
   </p>
 </template>
 
-<template id="lesson22-page13">
+<template id="lesson22-page14">
   <h2>ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая умножает число на 2.
@@ -2435,7 +2449,7 @@
   </p>
 </template>
 
-<template id="lesson22-page14">
+<template id="lesson22-page15">
   <h2>ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая складывает 2 числа, и отнимает 3.
@@ -2448,7 +2462,7 @@
   </p>
 </template>
 
-<template id="lesson22-page15">
+<template id="lesson22-page16">
   <h2>ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая возращает true если число больше 2.
@@ -2462,7 +2476,7 @@
   </p>
 </template>
 
-<template id="lesson22-page16">
+<template id="lesson22-page18">
   <h2>ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая возращает true если число в квадрате меньше Пи.
@@ -2476,7 +2490,7 @@
   </p>
 </template>
 
-<template id="lesson22-page17">
+<template id="lesson22-page19">
   <h2>Новый Мотериал: ОБЪЕКТО</h2>
   <p>
     Что такое ОБЪЕКТО?
@@ -2486,7 +2500,7 @@
   </p>
 </template>
 
-<template id="lesson22-page18">
+<template id="lesson22-page20">
   <h2>ПЕРЕМЕР: ТОЧКЕ</h2>
   <p>
     <pre>
@@ -2513,7 +2527,7 @@
   </p>
 </template>
 
-<template id="lesson22-page19">
+<template id="lesson22-page21">
   <h2>ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая принимает точку как обьект { x , y }, и возращает расстояние точки до начала координат (0, 0) числом.
@@ -2537,14 +2551,14 @@
   </p>
 </template>
 
-<template id="lesson22-page20">
+<template id="lesson22-page22">
   <h2>РЕКТ</h2>
   <figure>
     <img src="img/rectangle.jpeg" />
   </figure>
 </template>
 
-<template id="lesson22-page21">
+<template id="lesson22-page23">
   <h2>РЕКТ</h2>
   <p>
     <pre>
@@ -2559,7 +2573,7 @@
   </p>
 </template>
 
-<template id="lesson22-page22">
+<template id="lesson22-page24">
   <h2>ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая печатает на экран координаты и размер прямоульника { x, y, width, height }
@@ -2572,7 +2586,7 @@
   </p>
 </template>
 
-<template id="lesson22-page23">
+<template id="lesson22-page25">
   <h2>ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею isInsideRect(point, rect), которая возвращает true, если точка внутри прямоугольника, и false, если вне.
@@ -2603,7 +2617,7 @@
   </p>
 </template>
 
-<template id="lesson22-page24">
+<template id="lesson22-page26">
   <h2>RECT COLLISION FUNCTION</h2>
   <p class="task">
     Написать Фукцею rectsIntersect(rect1, rect2), которая возвращает true, если прямоугольники пересекаются, и false, если не.
@@ -2639,7 +2653,7 @@
   </p>
 </template>
 
-<template id="lesson22-page25">
+<template id="lesson22-page27">
   <h2>Вносим в код нашу RECT COLLISION FUNCTION</h2>
   <p>
     <ol>
@@ -2650,7 +2664,7 @@
   </p>
 </template>
 
-<template id="lesson22-page26">
+<template id="lesson22-page28">
   <h2>Добавляем еще 2 стены</h2>
   <p>
     <ol>
@@ -2660,19 +2674,19 @@
   </p>
 </template>
 
-<template id="lesson22-page27">
+<template id="lesson22-page29">
   <h2>GG WP :)</h2>
   <p>КОНЕКЦ</p>
 </template>
 
-<template id="lesson22-page28">
+<template id="lesson22-page30">
   <h2>Set Theory</h2>
   <p>
     <a href="https://www.youtube.com/watch?v=6s2UJBFDCoA">Комбінаторика. Початки теорії множини.</a>
   </p>
 </template>
 
-<template id="lesson22-page29">
+<template id="lesson22-page31">
   <h2>Venn Diagrams</h2>
   <p>
     <a href="https://www.youtube.com/watch?v=b6t0994ZZDA">Venn Diagrams: Shading Regions for Two Sets</a>
