Start adding lesson23 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2693,6 +2693,20 @@
   </p>
 </template>
 
+<template id="lesson23-pageX">
+  <h2>English</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=ZEg6Ht2pNH0">Bush</a>
+  </p>
+</template>
+
+<template id="lesson23-pageX">
+  <h2>КОЖНИЙ ПО РЕЧЕННЮ БІСТРО</h2>
+  <p>
+    What do y'all dogs think 'bout da Bush speech?
+  </p>
+</template>
+
 <script>
   let currentTime = 0;
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
