--- a/src/slides.html
+++ b/src/slides.html
@@ -2714,6 +2714,13 @@
   </p>
 </template>
 
+<template id="lesson23-pageX">
+  <h2>C</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=Y9Zw6xOGly0">C</a>
+  </p>
+</template>
+
 <script>
   let currentTime = 0;
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
